[backend] add token swagger API
