# backend/internal/api/dto/token_dto/token.go
@@ -9,3 +9,7 @@ type NewTokenResponse struct {
 	Token     string    `json:"token"`
 	ExpiresAt time.Time `json:"expires_at"`
 }
+
+type NewTokenResponseErr struct {
+	Error string `json:"error"`
+}
